--- a/anthrstlsht.css
+++ b/anthrstlsht.css
@@ -71,16 +71,22 @@ img {
   border: 0;
 }
 
-.btn-link{
-  border:none;
-  outline:none;
-  background:none;
-  cursor:pointer;
-  color:#0000EE;
-  padding:0;
-  text-decoration:underline;
-  font-family:inherit;
-  font-size:inherit;
+.reply {
+  position: relative;
+  padding: 20px;
+  width: 98%;
+}
+
+.btn-link {
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+  color: #0000EE;
+  padding: 0;
+  text-decoration: underline;
+  font-family: inherit;
+  font-size: inherit;
 }
 
 .button,
